# ure

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
examples/: README.md
examples/ure/contraposition/: contraposition.scm
examples/ure/frog/: README.md
examples/ure/meta-rules/: conditional-instantiation-meta-rule.scm
examples/ure/no-exec-output/: no-exec-output.scm
examples/ure/replacement/: README.md  kb.scm  rb.scm  replacement.scm
examples/ure/rules/: crisp-deduction-rule.scm  crisp-modus-ponens-rule.scm  fuzzy-conjunction-introduction-rule.scm
examples/ure/simple/: crisp-config.scm  crisp-deduction.py  crisp.scm
lib/: CMakeLists.txt  UREConfig.cmake.in
opencog/: CMakeLists.txt  README.md
opencog/cython/: CMakeLists.txt
opencog/cython/opencog/: CMakeLists.txt  backwardchainer.pyx  forwardchainer.pyx  logger.pyx  ure.pxd  ure.pyx
opencog/scm/: CMakeLists.txt
opencog/scm/opencog/: rule-engine.scm  unify.scm  ure.scm
opencog/scm/opencog/ure/: ure-utils.scm
opencog/unify/: CMakeLists.txt  UniVars.cc  UniVars.h  Unify.cc  Unify.h  UnifySCM.cc  UnifySCM.h
opencog/ure/: ActionSelection.cc  ActionSelection.h  BetaDistribution.cc  BetaDistribution.h  CMakeLists.txt  MixtureModel.cc  README.md  Rule.cc  Rule.h  ThompsonSampling.cc  ThompsonSampling.h  UREConfig.cc  UREConfig.h  URELogger.cc  URESCM.cc  Utils.cc  Utils.h  version.h
opencog/ure-utility/: CMakeLists.txt  Utility.h
opencog/ure/backwardchainer/: BIT.cc  BIT.h  BackwardChainer.cc  BackwardChainer.h  CMakeLists.txt  ControlPolicy.cc  ControlPolicy.h  Fitness.cc  TraceRecorder.cc  TraceRecorder.h
opencog/ure/forwardchainer/: CMakeLists.txt  FCStat.cc  FCStat.h  FocusSetPMCB.h  ForwardChainer.cc  ForwardChainer.h  SourceRuleSet.cc  SourceRuleSet.h  SourceSet.cc  SourceSet.h
opencog/ure/types/: CMakeLists.txt  atom_types.script  atom_types_init.cc
tests/: CMakeLists.txt
tests/cython/: CMakeLists.txt
tests/cython/forwardchainer/: test_fc.py
tests/unify/: CMakeLists.txt  UniVarsUTest.cxxtest  UnifyGlobUTest.cxxtest  UnifyUTest.cxxtest
tests/ure/: ActionSelectionUTest.cxxtest  BetaDistributionUTest.cxxtest  CMakeLists.txt  RuleUTest.cxxtest  UREConfigUTest.cxxtest  UtilsUTest.cxxtest
tests/ure/backwardchainer/: BITUTest.cxxtest  BackwardChainerUTest.cxxtest  CMakeLists.txt  ControlPolicyUTest.cxxtest  GradientUTest.cxxtest
tests/ure/backwardchainer/scm/: bc-criminal-config.scm  bc-induction-config.scm  bit.scm  conditional-partial-instantiation-config.scm  no-exec-output.scm
tests/ure/forwardchainer/: CMakeLists.txt  ForwardChainerUTest.cxxtest
tests/ure/forwardchainer/scm/: dfc-tests.scm  fc-animals-alt-config.scm  fc-animals-config.scm  fc-bindlink-no-vardecl-config.scm  fc-config.scm  fc-deduction-config.scm  fc-dummy-config.scm  fc-unsatisfied-premise.scm  negation-conflict.scm
tests/ure/meta-rules/: conditional-full-instantiation-meta-rule.scm  conditional-partial-instantiation-meta-rule.scm
tests/ure/rules/: bc-deduction-rule.scm  closed-lambda-introduction-rule.scm  conditional-direct-evaluation.scm  crisp-deduction-rule.scm  crisp-modus-ponens-rule.scm  evidence-based-conditional-direct-evaluation.scm  fc-deduction-rule.scm  fuzzy-conjunction-introduction-rule.scm  implication-and-lambda-factorization-rule.scm  implication-instantiation-rule.scm  implication-introduction-rule.scm  implication-scope-direct-evaluation-rule.scm  implication-scope-to-implication-rule.scm  intensional-inheritance-direct-introduction.scm  pln-implication-and-lambda-factorization-rule.scm  unary-specialization-rule.scm
